# vaya

./: .gitignore  CLAUDE.md  README.md  electrobun.config.ts  package.json  start.sh  tsconfig.json
backend/: config.py  config.yaml  main.py  models.py  pyproject.toml
backend/routers/: analyze.py  export.py  file_dialog.py  health.py  settings.py  subtitle.py  upload.py  video.py
backend/services/: audio_analysis.py  exporter.py  highlight_scorer.py  silence_detector.py  subtitle_generator.py  thumbnail_generator.py  video_analysis.py  video_info.py
backend/tests/: conftest.py  test_analyze.py  test_export.py  test_subtitle.py  test_upload.py
backend/ws/: progress.py
docs/: remaining-work.md  requiredment.md
docs/demo/: vaya-flow-demo.html
docs/design/: architecture-decisions.md  conscious-decisions.md  edge-cases.md  future-fixes.md  gap-tracking.md  known-bugs.md  prd-backend-audit.md  prd-frontend-audit.md  test-gaps.md
docs/prd/: 20260309-vaya-mvp.md
scripts/: setup-backend.sh
src/bun/: index.ts  python-manager.ts  rpc-schema.ts
src/views/main/: index.html  main.ts  style.css
tests/e2e/: conftest.py  electrobun_mock.js  serve_frontend.py  test_backend_e2e.py  test_frontend_e2e.py
